[gd_scene load_steps=3 format=3 uid="uid://b06c2lp0kjkcu"]

[ext_resource type="Script" path="res://scenes/ui/options_menu/options_menu.gd" id="1_6gn03"]
[ext_resource type="PackedScene" uid="uid://c5c1kc7p8p6bf" path="res://scenes/ui/sound_button/sound_button.tscn" id="3_2koos"]

[node name="OptionsMenu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_6gn03")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 24

[node name="Title" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 32
text = "Options"
horizontal_alignment = 1

[node name="SettingsListGroup" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SfxOptionContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsListGroup"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsListGroup/SfxOptionContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "SFX Volume"

[node name="SfxSlider" type="HSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsListGroup/SfxOptionContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="MusicOptionContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsListGroup"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsListGroup/MusicOptionContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsListGroup/MusicOptionContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="WindowOptionContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsListGroup"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsListGroup/WindowOptionContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "Window Mode
"

[node name="WindowButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsListGroup/WindowOptionContainer" instance=ExtResource("3_2koos")]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Windowed
"

[node name="BackButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_2koos")]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Back
"
